@@ -14,6 +14,7 @@
   <property name="default_height">100</property>
   <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
+  <property name="icon">gamp.png</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -153,7 +154,7 @@
 
 	      <child>
 		<widget class="GtkAlignment" id="alignment_current_song">
-		  <property name="border_width">11</property>
+		  <property name="border_width">12</property>
 		  <property name="visible">True</property>
 		  <property name="xalign">0.5</property>
 		  <property name="yalign">0.5</property>
@@ -167,12 +168,13 @@
 		  <child>
 		    <widget class="GtkLabel" id="label_current_song">
 		      <property name="visible">True</property>
+		      <property name="can_focus">True</property>
 		      <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;Not Currently Playing&lt;/big&gt;&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_CENTER</property>
-		      <property name="wrap">True</property>
-		      <property name="selectable">False</property>
+		      <property name="wrap">False</property>
+		      <property name="selectable">True</property>
 		      <property name="xalign">0.5</property>
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
@@ -267,8 +269,8 @@
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
-	  <property name="expand">True</property>
-	  <property name="fill">True</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
 	</packing>
       </child>
 
@@ -286,11 +288,19 @@
 	  <property name="right_padding">0</property>
 
 	  <child>
-	    <widget class="GtkProgressBar" id="progressbar_time">
+	    <widget class="GtkHScale" id="hscale_progress">
 	      <property name="visible">True</property>
-	      <property name="orientation">GTK_PROGRESS_LEFT_TO_RIGHT</property>
-	      <property name="fraction">0</property>
-	      <property name="pulse_step">0.1</property>
+	      <property name="can_focus">True</property>
+	      <property name="draw_value">False</property>
+	      <property name="value_pos">GTK_POS_TOP</property>
+	      <property name="digits">1</property>
+	      <property name="update_policy">GTK_UPDATE_CONTINUOUS</property>
+	      <property name="inverted">False</property>
+	      <property name="adjustment">0 0 1 0.01 0.1 0</property>
+	      <signal name="button_press_event" handler="on_hscale_progress_button_press_event" last_modification_time="Thu, 15 Apr 2004 16:08:14 GMT"/>
+	      <signal name="button_release_event" handler="on_hscale_progress_button_release_event" last_modification_time="Thu, 15 Apr 2004 16:08:21 GMT"/>
+	      <signal name="motion_notify_event" handler="on_hscale_progress_motion_notify_event" last_modification_time="Thu, 15 Apr 2004 16:08:32 GMT"/>
+	      <signal name="value_changed" handler="on_hscale_progress_value_changed" last_modification_time="Thu, 15 Apr 2004 16:08:38 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
